# rpg-engine

./: .gitattributes  .gitignore  AGENTS.md  BUG_REPORT_2026-07-01.md  README.md  TESTING.md  pyproject.toml
_bmad/: config.toml
_bmad-output/: api-contracts.md  architecture.md  component-inventory.md  data-models.md  development-guide.md  document-project-completion-summary.md  documentation-provenance-audit.md  index.md  project-overview.md  project-scan-report.json  round-1-sync-report.md  round-2-canonical-docs-report.md  round-3-domain-docs-report.md  round-4-archive-map.md  round-5-docs-gate-report.md  round-6-doc-code-audit.md  round-7-player-session-concurrency.md  source-tree-analysis.md
docs/: README.md  ai-intent-chain.md  architecture.md  authoring-guide.md  cli-contracts.md  component-inventory.md  data-models.md  development-guide.md  development-workflow.md  index.md  mcp-contracts.md  project-context.md  project-overview.md  prompt-contracts.md  save-and-campaign-packages.md  source-tree-analysis.md  testing-and-quality-gates.md
migrations/: 0002_world_settings.sql  0003_write_reliability.sql  0004_discovery_proposals.sql  0005_archivist_proposal_queue.sql
reports/: current-save-stress-2026-07-02-after-fixes.md  current-save-stress-2026-07-02.md  ops-current.md
rp/: README.md
rpg_engine/: __init__.py  archivist.py  atomic_io.py  audit.py  backup.py  campaign.py  campaign_validation.py  canonical_json.py  capabilities.py  card_registry.py  cards.py  cli.py  cli_text.py  cli_v1.py  commit_service.py  content_delta.py  content_factory.py  content_sync.py  content_validation.py  context_audit.py  context_builder.py  db.py  (+57 more)
(+515 files in other folders)
